video src change

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     </button>        
                     <!-- 16:9 aspect ratio -->
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
+                        <video controls width="100%" height="auto">
+                            <source src="img/IMG_1511.MOV" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
