--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <h1 class="font-secondary display-4">Расположение</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
-            <div class="row" style="justify-content: center;">
+            <div class="row" style="justify-content: center; flex-direction: column; align-items: center;">
                 <div class="col-md-6">
                     <div class="text-center ml-md-3">
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <div style="margin-top: 5px;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.8709030931404!2d33.8956138667331!3d44.7468177278961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40ead4f8d4632dd9%3A0xeb767246092b2334!2sBasenka%20St%2C%2033%2C%20Bakhchysarai!5e0!3m2!1ska!2sge!4v1700477253080!5m2!1ska!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe style="width: auto;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.8709030931404!2d33.8956138667331!3d44.7468177278961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40ead4f8d4632dd9%3A0xeb767246092b2334!2sBasenka%20St%2C%2033%2C%20Bakhchysarai!5e0!3m2!1ska!2sge!4v1700477253080!5m2!1ska!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
