--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <div class="container-fluid py-5" id="event">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-4">до встречей</h1>
+                <h1 class="font-secondary display-4">до встречи</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row" style="justify-content: center;">
