--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/damirheader1.png" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/damirheader.jpeg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Damir</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">1 Years old</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">И мои родители решили закатить тусу и пригласить сааааамых близких
+                                    Но давайте в начале я покажу как прошел первый год моей жизни………..</h3>
                             </div>
                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/I9NyWQn1264?si=_dCTjG6TGAwWcW6u" data-target="#videoModal">
@@ -137,7 +137,7 @@
             <div class="row m-0 mb-4 mb-md-0 pb-2 pb-md-0">
                 <div class="col-md-6 p-0 text-center text-md-right">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <h3 class="mb-3">отец</h3>
+                        <h3 class="mb-3">бабака</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-male text-primary pr-3"></i>асан</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3">+79787773527</h3>
                         <div class="position-relative">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-md-6 p-0 text-center text-md-left">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <h3 class="mb-3">мать</h3>
+                        <h3 class="mb-3">анака</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-female text-primary pr-3"></i>лиана</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3">+79785274127</h3>
                         <div class="position-relative">
@@ -177,24 +177,6 @@
             <i class="far fa-heart text-white"></i>
         </div>
         <div class="owl-carousel gallery-carousel">
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
-                <a href="img/gallery-1.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
-                <a href="img/gallery-2.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
-                <a href="img/gallery-3.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/damirgallery1.jpeg" alt="">
                 <a href="img/damirgallery1.jpeg" data-lightbox="gallery">
@@ -232,6 +214,7 @@
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <h4 class="mb-3">день рождения</h4>
                         <p class="mb-2">Г.Бахчисарай, ул. Басенко,33</p>
+                        <p class="mb-2">Кафе «Мераба»</p>
                         <p class="mb-0">17:00 - 00:00</p>
                     </div>
                 </div>
