--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <img class="position-absolute w-100 h-100" src="img/damirheader2.jpeg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Всем Селям Алейкум</h1>
+                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Всем селям алейкум,здравствуйте</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">Меня зовут Дамир 
-                                    Родился я 01.12.20222
+                                    Родился я 01.12.2022
                                     Это значит,что 01.12.2023 мне исполняется целый ГОД</h3>
                             </div>
                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
@@ -137,8 +137,7 @@
             <div class="row m-0 mb-4 mb-md-0 pb-2 pb-md-0">
                 <div class="col-md-6 p-0 text-center text-md-right">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <h3 class="mb-3">бабака</h3>
-                        <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-male text-primary pr-3"></i>асан</h3>
+                        <h3 class="mb-3">асан</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3">+79787773527</h3>
                         <div class="position-relative">
                             <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://www.instagram.com/s_500___/"><i class="fab fa-instagram"></i></a>
@@ -155,8 +154,7 @@
                 </div>
                 <div class="col-md-6 p-0 text-center text-md-left">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <h3 class="mb-3">анака</h3>
-                        <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-female text-primary pr-3"></i>лиана</h3>
+                        <h3 class="mb-3">лиана</h3>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3">+79785274127</h3>
                         <div class="position-relative">
                             <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://www.instagram.com/__liana99__"><i class="fab fa-instagram"></i></a>
@@ -215,6 +213,7 @@
                         <h4 class="mb-3">день рождения</h4>
                         <p class="mb-2">Г.Бахчисарай, ул. Басенко,33</p>
                         <p class="mb-2">Кафе «Мераба»</p>
+                        <p class="mb-2">мероприятия 02.12.2023</p>
                         <p class="mb-0">17:00 - 00:00</p>
                     </div>
                 </div>
